# AGH-Racing-Turbocharger_Calculations

./: .gitignore  CMakeLists.txt  turbo.cpp  turbo.sln
include/turbocalc/: model.hpp  units.hpp
turbo/: turbo.cpp  turbo.vcxproj  turbo.vcxproj.filters
